--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "run": "index.js"
   },
   "dependencies": {
-    "aws_message_reader": "^3.1.0",
-    "nodeify_lambda_context": "^1.0.2"
+    "aws_message_reader": "^3.1.0"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
